y.output
   0  $accept : program $end

   1  program : program stat
   2          | program stat NEWLINE
   3          |

   4  fprogram : fprogram fstat
   5           | fprogram fstat NEWLINE
   6           |

   7  new_line : new_line NEWLINE
   8           |

   9  stat : declaration
  10       | compound_stat
  11       | expr_asgn SEMICOLON
  12       | expression_stat4 semicolon
  13       | function_decl
  14       | function_def
  15       |

  16  fstat : fdeclaration
  17        | compound_stat
  18        | expr_asgn SEMICOLON
  19        | expression_stat4 semicolon
  20        | function_call
  21        | print_func
  22        |

  23  semicolon : SEMICOLON
  24            |

  25  function_call : ID LB parameter RB SEMICOLON NEWLINE

  26  parameter : pass
  27            | parameter COMMA pass
  28            |

  29  pass : ID
  30       | initializer

  31  expr_asgn : ID ASGN expression_stat4
  32            | ID ADDASGN factor
  33            | ID SUBASGN factor
  34            | ID MULASGN factor
  35            | ID DIVASGN factor
  36            | ID MODASGN factor

  37  function_decl : type ID LB argument RB SEMICOLON NEWLINE

  38  function_def : type ID LB argument RB LCB fprogram RCB
  39               | type ID LB argument RB LCB NEWLINE fprogram return NEWLINE RCB NEWLINE

  40  return : RET SEMICOLON
  41         | RET TRUE SEMICOLON
  42         | RET FALSE SEMICOLON
  43         | RET I_CONST SEMICOLON
  44         | RET F_CONST SEMICOLON
  45         | RET STR_CONST SEMICOLON

  46  nargument : type ID
  47            | nargument COMMA type ID
  48            |

  49  fdecl_bottom : RB SEMICOLON NEWLINE

  50  argument : type ID
  51           | argument COMMA type ID
  52           |

  53  declaration : type ID ASGN initializer SEMICOLON NEWLINE
  54              | type ID SEMICOLON NEWLINE
  55              | type ID ASGN expression_stat4 SEMICOLON NEWLINE

  56  fdeclaration : type ID SEMICOLON NEWLINE
  57               | type ID ASGN initializer SEMICOLON NEWLINE
  58               | type ID ASGN expression_stat4 SEMICOLON NEWLINE

  59  compound_stat : if_stat
  60                | while_stat

  61  if_stat : IF LB expression_stat4 RB LCB fprogram RCB
  62          | IF LB expression_stat4 RB LCB fprogram RCB ELSE if_stat
  63          | IF LB expression_stat4 RB LCB fprogram RCB ELSE new_line LCB new_line fprogram RCB

  64  while_stat : WHILE LB expression_stat4 RB LCB fprogram RCB

  65  expression_stat4 : expression_stat4 EQ expression_stat3
  66                   | expression_stat4 MTE expression_stat3
  67                   | expression_stat4 LTE expression_stat3
  68                   | expression_stat4 NE expression_stat3
  69                   | expression_stat4 MT expression_stat3
  70                   | expression_stat4 LT expression_stat3
  71                   | expression_stat3

  72  expression_stat3 : expression_stat3 ADD expression_stat2
  73                   | expression_stat3 SUB expression_stat2
  74                   | expression_stat2

  75  expression_stat2 : expression_stat2 MUL expression_stat1
  76                   | expression_stat2 DIV expression_stat1
  77                   | expression_stat2 MOD expression_stat1
  78                   | expression_stat1

  79  expression_stat1 : expression_stat1 INC
  80                   | expression_stat1 DEC
  81                   | factor

  82  factor : LB expression_stat4 RB
  83         | ID
  84         | I_CONST
  85         | F_CONST

  86  print_func : PRINT LB ID RB SEMICOLON NEWLINE
  87             | PRINT LB STR_CONST RB SEMICOLON NEWLINE

  88  initializer : I_CONST
  89              | F_CONST
  90              | STR_CONST

  91  type : INT
  92       | FLOAT
  93       | BOOL
  94       | STRING
  95       | VOID

state 0
	$accept : . program $end  (0)
	program : .  (3)

	.  reduce 3

	program  goto 1


1: shift/reduce conflict (shift 2, reduce 15) on IF
1: shift/reduce conflict (shift 3, reduce 15) on WHILE
1: shift/reduce conflict (shift 4, reduce 15) on LB
1: shift/reduce conflict (shift 5, reduce 15) on I_CONST
1: shift/reduce conflict (shift 6, reduce 15) on F_CONST
1: shift/reduce conflict (shift 7, reduce 15) on BOOL
1: shift/reduce conflict (shift 8, reduce 15) on INT
1: shift/reduce conflict (shift 9, reduce 15) on STRING
1: shift/reduce conflict (shift 10, reduce 15) on FLOAT
1: shift/reduce conflict (shift 11, reduce 15) on VOID
1: shift/reduce conflict (shift 12, reduce 15) on ID
state 1
	$accept : program . $end  (0)
	program : program . stat  (1)
	program : program . stat NEWLINE  (2)
	stat : .  (15)

	$end  accept
	IF  shift 2
	WHILE  shift 3
	LB  shift 4
	I_CONST  shift 5
	F_CONST  shift 6
	BOOL  shift 7
	INT  shift 8
	STRING  shift 9
	FLOAT  shift 10
	VOID  shift 11
	ID  shift 12
	$end  reduce 15
	NEWLINE  reduce 15

	type  goto 13
	stat  goto 14
	declaration  goto 15
	compound_stat  goto 16
	function_decl  goto 17
	function_def  goto 18
	if_stat  goto 19
	while_stat  goto 20
	expression_stat4  goto 21
	expr_asgn  goto 22
	expression_stat3  goto 23
	expression_stat2  goto 24
	expression_stat1  goto 25
	factor  goto 26


state 2
	if_stat : IF . LB expression_stat4 RB LCB fprogram RCB  (61)
	if_stat : IF . LB expression_stat4 RB LCB fprogram RCB ELSE if_stat  (62)
	if_stat : IF . LB expression_stat4 RB LCB fprogram RCB ELSE new_line LCB new_line fprogram RCB  (63)

	LB  shift 27
	.  error


state 3
	while_stat : WHILE . LB expression_stat4 RB LCB fprogram RCB  (64)

	LB  shift 28
	.  error


state 4
	factor : LB . expression_stat4 RB  (82)

	LB  shift 4
	I_CONST  shift 5
	F_CONST  shift 6
	ID  shift 29
	.  error

	expression_stat4  goto 30
	expression_stat3  goto 23
	expression_stat2  goto 24
	expression_stat1  goto 25
	factor  goto 26


state 5
	factor : I_CONST .  (84)

	.  reduce 84


state 6
	factor : F_CONST .  (85)

	.  reduce 85


state 7
	type : BOOL .  (93)

	.  reduce 93


state 8
	type : INT .  (91)

	.  reduce 91


state 9
	type : STRING .  (94)

	.  reduce 94


state 10
	type : FLOAT .  (92)

	.  reduce 92


state 11
	type : VOID .  (95)

	.  reduce 95


state 12
	expr_asgn : ID . ASGN expression_stat4  (31)
	expr_asgn : ID . ADDASGN factor  (32)
	expr_asgn : ID . SUBASGN factor  (33)
	expr_asgn : ID . MULASGN factor  (34)
	expr_asgn : ID . DIVASGN factor  (35)
	expr_asgn : ID . MODASGN factor  (36)
	factor : ID .  (83)

	ASGN  shift 31
	ADDASGN  shift 32
	SUBASGN  shift 33
	MULASGN  shift 34
	DIVASGN  shift 35
	MODASGN  shift 36
	$end  reduce 83
	IF  reduce 83
	SEMICOLON  reduce 83
	NEWLINE  reduce 83
	ADD  reduce 83
	SUB  reduce 83
	MUL  reduce 83
	DIV  reduce 83
	MOD  reduce 83
	INC  reduce 83
	DEC  reduce 83
	MT  reduce 83
	LT  reduce 83
	MTE  reduce 83
	LTE  reduce 83
	EQ  reduce 83
	NE  reduce 83
	WHILE  reduce 83
	LB  reduce 83
	I_CONST  reduce 83
	F_CONST  reduce 83
	BOOL  reduce 83
	INT  reduce 83
	STRING  reduce 83
	FLOAT  reduce 83
	VOID  reduce 83
	ID  reduce 83


state 13
	function_decl : type . ID LB argument RB SEMICOLON NEWLINE  (37)
	function_def : type . ID LB argument RB LCB fprogram RCB  (38)
	function_def : type . ID LB argument RB LCB NEWLINE fprogram return NEWLINE RCB NEWLINE  (39)
	declaration : type . ID ASGN initializer SEMICOLON NEWLINE  (53)
	declaration : type . ID SEMICOLON NEWLINE  (54)
	declaration : type . ID ASGN expression_stat4 SEMICOLON NEWLINE  (55)

	ID  shift 37
	.  error


14: shift/reduce conflict (shift 38, reduce 1) on NEWLINE
state 14
	program : program stat .  (1)
	program : program stat . NEWLINE  (2)

	NEWLINE  shift 38
	$end  reduce 1
	IF  reduce 1
	WHILE  reduce 1
	LB  reduce 1
	I_CONST  reduce 1
	F_CONST  reduce 1
	BOOL  reduce 1
	INT  reduce 1
	STRING  reduce 1
	FLOAT  reduce 1
	VOID  reduce 1
	ID  reduce 1


state 15
	stat : declaration .  (9)

	.  reduce 9


state 16
	stat : compound_stat .  (10)

	.  reduce 10


state 17
	stat : function_decl .  (13)

	.  reduce 13


state 18
	stat : function_def .  (14)

	.  reduce 14


state 19
	compound_stat : if_stat .  (59)

	.  reduce 59


state 20
	compound_stat : while_stat .  (60)

	.  reduce 60


state 21
	stat : expression_stat4 . semicolon  (12)
	expression_stat4 : expression_stat4 . EQ expression_stat3  (65)
	expression_stat4 : expression_stat4 . MTE expression_stat3  (66)
	expression_stat4 : expression_stat4 . LTE expression_stat3  (67)
	expression_stat4 : expression_stat4 . NE expression_stat3  (68)
	expression_stat4 : expression_stat4 . MT expression_stat3  (69)
	expression_stat4 : expression_stat4 . LT expression_stat3  (70)
	semicolon : .  (24)

	SEMICOLON  shift 39
	MT  shift 40
	LT  shift 41
	MTE  shift 42
	LTE  shift 43
	EQ  shift 44
	NE  shift 45
	$end  reduce 24
	IF  reduce 24
	NEWLINE  reduce 24
	WHILE  reduce 24
	LB  reduce 24
	I_CONST  reduce 24
	F_CONST  reduce 24
	BOOL  reduce 24
	INT  reduce 24
	STRING  reduce 24
	FLOAT  reduce 24
	VOID  reduce 24
	ID  reduce 24

	semicolon  goto 46


state 22
	stat : expr_asgn . SEMICOLON  (11)

	SEMICOLON  shift 47
	.  error


state 23
	expression_stat4 : expression_stat3 .  (71)
	expression_stat3 : expression_stat3 . ADD expression_stat2  (72)
	expression_stat3 : expression_stat3 . SUB expression_stat2  (73)

	ADD  shift 48
	SUB  shift 49
	$end  reduce 71
	PRINT  reduce 71
	IF  reduce 71
	SEMICOLON  reduce 71
	NEWLINE  reduce 71
	MT  reduce 71
	LT  reduce 71
	MTE  reduce 71
	LTE  reduce 71
	EQ  reduce 71
	NE  reduce 71
	WHILE  reduce 71
	LB  reduce 71
	RB  reduce 71
	RCB  reduce 71
	RET  reduce 71
	I_CONST  reduce 71
	F_CONST  reduce 71
	BOOL  reduce 71
	INT  reduce 71
	STRING  reduce 71
	FLOAT  reduce 71
	VOID  reduce 71
	ID  reduce 71


state 24
	expression_stat3 : expression_stat2 .  (74)
	expression_stat2 : expression_stat2 . MUL expression_stat1  (75)
	expression_stat2 : expression_stat2 . DIV expression_stat1  (76)
	expression_stat2 : expression_stat2 . MOD expression_stat1  (77)

	MUL  shift 50
	DIV  shift 51
	MOD  shift 52
	$end  reduce 74
	PRINT  reduce 74
	IF  reduce 74
	SEMICOLON  reduce 74
	NEWLINE  reduce 74
	ADD  reduce 74
	SUB  reduce 74
	MT  reduce 74
	LT  reduce 74
	MTE  reduce 74
	LTE  reduce 74
	EQ  reduce 74
	NE  reduce 74
	WHILE  reduce 74
	LB  reduce 74
	RB  reduce 74
	RCB  reduce 74
	RET  reduce 74
	I_CONST  reduce 74
	F_CONST  reduce 74
	BOOL  reduce 74
	INT  reduce 74
	STRING  reduce 74
	FLOAT  reduce 74
	VOID  reduce 74
	ID  reduce 74


state 25
	expression_stat2 : expression_stat1 .  (78)
	expression_stat1 : expression_stat1 . INC  (79)
	expression_stat1 : expression_stat1 . DEC  (80)

	INC  shift 53
	DEC  shift 54
	$end  reduce 78
	PRINT  reduce 78
	IF  reduce 78
	SEMICOLON  reduce 78
	NEWLINE  reduce 78
	ADD  reduce 78
	SUB  reduce 78
	MUL  reduce 78
	DIV  reduce 78
	MOD  reduce 78
	MT  reduce 78
	LT  reduce 78
	MTE  reduce 78
	LTE  reduce 78
	EQ  reduce 78
	NE  reduce 78
	WHILE  reduce 78
	LB  reduce 78
	RB  reduce 78
	RCB  reduce 78
	RET  reduce 78
	I_CONST  reduce 78
	F_CONST  reduce 78
	BOOL  reduce 78
	INT  reduce 78
	STRING  reduce 78
	FLOAT  reduce 78
	VOID  reduce 78
	ID  reduce 78


state 26
	expression_stat1 : factor .  (81)

	.  reduce 81


state 27
	if_stat : IF LB . expression_stat4 RB LCB fprogram RCB  (61)
	if_stat : IF LB . expression_stat4 RB LCB fprogram RCB ELSE if_stat  (62)
	if_stat : IF LB . expression_stat4 RB LCB fprogram RCB ELSE new_line LCB new_line fprogram RCB  (63)

	LB  shift 4
	I_CONST  shift 5
	F_CONST  shift 6
	ID  shift 29
	.  error

	expression_stat4  goto 55
	expression_stat3  goto 23
	expression_stat2  goto 24
	expression_stat1  goto 25
	factor  goto 26


state 28
	while_stat : WHILE LB . expression_stat4 RB LCB fprogram RCB  (64)

	LB  shift 4
	I_CONST  shift 5
	F_CONST  shift 6
	ID  shift 29
	.  error

	expression_stat4  goto 56
	expression_stat3  goto 23
	expression_stat2  goto 24
	expression_stat1  goto 25
	factor  goto 26


state 29
	factor : ID .  (83)

	.  reduce 83


state 30
	expression_stat4 : expression_stat4 . EQ expression_stat3  (65)
	expression_stat4 : expression_stat4 . MTE expression_stat3  (66)
	expression_stat4 : expression_stat4 . LTE expression_stat3  (67)
	expression_stat4 : expression_stat4 . NE expression_stat3  (68)
	expression_stat4 : expression_stat4 . MT expression_stat3  (69)
	expression_stat4 : expression_stat4 . LT expression_stat3  (70)
	factor : LB expression_stat4 . RB  (82)

	MT  shift 40
	LT  shift 41
	MTE  shift 42
	LTE  shift 43
	EQ  shift 44
	NE  shift 45
	RB  shift 57
	.  error


state 31
	expr_asgn : ID ASGN . expression_stat4  (31)

	LB  shift 4
	I_CONST  shift 5
	F_CONST  shift 6
	ID  shift 29
	.  error

	expression_stat4  goto 58
	expression_stat3  goto 23
	expression_stat2  goto 24
	expression_stat1  goto 25
	factor  goto 26


state 32
	expr_asgn : ID ADDASGN . factor  (32)

	LB  shift 4
	I_CONST  shift 5
	F_CONST  shift 6
	ID  shift 29
	.  error

	factor  goto 59


state 33
	expr_asgn : ID SUBASGN . factor  (33)

	LB  shift 4
	I_CONST  shift 5
	F_CONST  shift 6
	ID  shift 29
	.  error

	factor  goto 60


state 34
	expr_asgn : ID MULASGN . factor  (34)

	LB  shift 4
	I_CONST  shift 5
	F_CONST  shift 6
	ID  shift 29
	.  error

	factor  goto 61


state 35
	expr_asgn : ID DIVASGN . factor  (35)

	LB  shift 4
	I_CONST  shift 5
	F_CONST  shift 6
	ID  shift 29
	.  error

	factor  goto 62


state 36
	expr_asgn : ID MODASGN . factor  (36)

	LB  shift 4
	I_CONST  shift 5
	F_CONST  shift 6
	ID  shift 29
	.  error

	factor  goto 63


state 37
	function_decl : type ID . LB argument RB SEMICOLON NEWLINE  (37)
	function_def : type ID . LB argument RB LCB fprogram RCB  (38)
	function_def : type ID . LB argument RB LCB NEWLINE fprogram return NEWLINE RCB NEWLINE  (39)
	declaration : type ID . ASGN initializer SEMICOLON NEWLINE  (53)
	declaration : type ID . SEMICOLON NEWLINE  (54)
	declaration : type ID . ASGN expression_stat4 SEMICOLON NEWLINE  (55)

	SEMICOLON  shift 64
	ASGN  shift 65
	LB  shift 66
	.  error


state 38
	program : program stat NEWLINE .  (2)

	.  reduce 2


state 39
	semicolon : SEMICOLON .  (23)

	.  reduce 23


state 40
	expression_stat4 : expression_stat4 MT . expression_stat3  (69)

	LB  shift 4
	I_CONST  shift 5
	F_CONST  shift 6
	ID  shift 29
	.  error

	expression_stat3  goto 67
	expression_stat2  goto 24
	expression_stat1  goto 25
	factor  goto 26


state 41
	expression_stat4 : expression_stat4 LT . expression_stat3  (70)

	LB  shift 4
	I_CONST  shift 5
	F_CONST  shift 6
	ID  shift 29
	.  error

	expression_stat3  goto 68
	expression_stat2  goto 24
	expression_stat1  goto 25
	factor  goto 26


state 42
	expression_stat4 : expression_stat4 MTE . expression_stat3  (66)

	LB  shift 4
	I_CONST  shift 5
	F_CONST  shift 6
	ID  shift 29
	.  error

	expression_stat3  goto 69
	expression_stat2  goto 24
	expression_stat1  goto 25
	factor  goto 26


state 43
	expression_stat4 : expression_stat4 LTE . expression_stat3  (67)

	LB  shift 4
	I_CONST  shift 5
	F_CONST  shift 6
	ID  shift 29
	.  error

	expression_stat3  goto 70
	expression_stat2  goto 24
	expression_stat1  goto 25
	factor  goto 26


state 44
	expression_stat4 : expression_stat4 EQ . expression_stat3  (65)

	LB  shift 4
	I_CONST  shift 5
	F_CONST  shift 6
	ID  shift 29
	.  error

	expression_stat3  goto 71
	expression_stat2  goto 24
	expression_stat1  goto 25
	factor  goto 26

